--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
   <!-- Local CSS -->
-  <link rel="stylesheet" href="test.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -115,7 +115,7 @@
   </footer>
 
   <!-- Bootsratp js -->
-  <script src="test.js"></script>
+  <script src="app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
